# fastkron

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  kronecker-model.py  kroneckertensor.py  libFastKron.pc.in  multi-gpu-distinct-shapes  pyproject.toml  requirements.txt  requirements_cpu.txt  requirements_cu118.txt  requirements_cu122.txt  requirements_sgkigp.txt  results-M=16.csv  results-M=320.csv  results-M=4.csv  results-M=80.csv  results.csv  setup.py  setup.sh  sgkigp_environment  skisimplex.sh  uci_datasets.ipynb
benchmarks/: KISSGP-1024x255x16x5.py  KISSGP-results-V100-16GB.csv  KISSGP-results-trace-15.csv  KISSGP-results-trace-31.csv  KISSGP-results-trace-7.csv  KISSGP.py  KSSGP-results.csv  SKI.py  SKIProducts.py  Scalable_Kernel_Interpolation_for_Products_CUDA.py  Simple_GP_Regression_With_LOVE_Fast_Variances_and_Sampling.py  Simple_Multi_GPU.py  bench.py  benchmark.cu  gpytorch-ex.py  kronecker-model.py  latest-fastkron-results  profile_kernels.py  pykronecker-ex.py  run_benchmarks.py  run_kron_matmuls.py
documents/: api.md  autotuning.md  contributing.md  cpp-api.md  performance.md  python-api.md
example/: Makefile  cuda-example.cu  example.cu  torch-example.py  x86-example.cpp
experiments/: data.py  dryrunsgkigp.py  functioninterp.py  mempro.py  misc.py  models.py  profiler.py  refrenceSKI.py  runner.py  setups.py  sgtchmvm.py  simplex.py  sinetest.py  storeinterps.py  timemvm.py  train_sgpr.py
include/: fastkron.h  fastkronMg.h
kronecker_gemm_cuda/: Makefile  kron  kron.cu
packaging/: any_build.sh  manylinux_docker_build.sh  wheels.py
pyfastkron/: __init__.py  ex.py  fastkron.py  fastkronbase.py  fastkronhandle.py  fastkronnumpy.py  fastkrontorch.py  python_wrapper.py  pywrapper.cpp
python/: lib_numpy.py  lib_scipy.py  lib_torch.py
sgkigp/: config.py  sginterpdemo.py  skioperator.py  tensorize.py  utils.py
sgkigp/algos/: sgmatmuliterative.py  sgmatmulrecursive.py  sgnpmvm.py  sgops.py
sgkigp/interp/: kernels.py  misc.py  rectgrid.py  rginterp.py  sginterp.py  simplicial.py
sgkigp/kernels/: basekernels.py  gridinterpkernel.py  kernelsvizs.py  sgcovars.py  sginterpkernel.py  sgkernel.py
sgkigp/lazy/: interptensor.py  sginterptensor.py  sgkerneltensor.py
sgkigp/models/: bypasscovargp.py  predictionstrategy.py  sgpredictionstrategy.py
src/: CMakeLists.txt  Makefile  autotuner.cpp  autotuner.h  best_performing_kernels.in  config.h  device_functions.cuh  distrib_fastkron.cu  distrib_handle.cu  env.cpp  env.h  fastkron.cpp  fastkron.cu  fastkron.h  fastkron.py  gen_kernels.py  gen_tuner_kernels.py  handle.cu  handle.h  kernel.cuh  kernel_decl.inc  kernel_defs.cuh  kernel_invoker.cpp  kernel_invoker.cu  kmmalgo.cu  kmmalgo.h  kron.cu  kron.h  kron_device.cu  kron_device.h  matmul-kp.cpp  optimized_kernel_map.py  print_best_kernel_for_shapes.py  pymodule.cpp  python-test.py  python_wrapper.py  sample_cublas.cpp  saxpy.cpp  shared_v1.cu  sliced_mul_shape.cpp  (+6 more)
src/autotuner/: autotuner.cpp  autotuner.h
src/device/: Makefile  common.h  device_functions.cuh  fixed-shape-tensor.cuh  global-store.cuh  kernel.cuh  kernel_info.h  mma.cuh  otherkernels.cuh  params.h  register-loads.cuh  shared-loads.cuh  shared_cache.cuh  sliced_mul_shape.cpp  sliced_mul_shape.h  utils.cuh
src/env/: env.cpp  env.h
src/handle/: distrib_handle.cpp  distrib_handle.cu  handle.cpp  handle.cu  handle.h  handle.inline.h  op.h
src/kernel_db/: kernel_db.cu  (+12 more)
test/: main.cu
tests/: CMakeLists.txt  main.cu  multi-gpu-distinct-shapes.cpp  multi-gpu-distinct-shapes.cu  multi-gpu-nccl-no-fusion-tests.cu  multi-gpu-no-fusion-non-square-tests.cpp  multi-gpu-no-fusion-non-square-tests.cu  multi-gpu-no-fusion-tests.cpp  multi-gpu-no-fusion-tests.cu  multi-gpu-tuner-tests.cpp  multi-gpu-tuner-tests.cu  run-tests.py  single-gpu-NT-tests.cpp  single-gpu-TT-tests.cpp  single-gpu-distinct-shapes.cpp  single-gpu-distinct-shapes.cu  single-gpu-fusion-tests.cpp  single-gpu-fusion-tests.cu  single-gpu-kernel-decls.in  single-gpu-no-fusion-tests.cpp  single-gpu-no-fusion-tests.cu  single-gpu-non-square-TT-tests.cpp  single-gpu-non-square-tuner-tests.cpp  single-gpu-non-square-tuner-tests.cu  single-gpu-odd-shapes.cpp  single-gpu-odd-shapes.cu  single-gpu-tests.cu  single-gpu-tuner-tests-no-fusion.cu  single-gpu-tuner-tests.cpp  single-gpu-tuner-tests.cu  testBase.h  update-configs.py
tests/benchmarks/: CMakeLists.txt  benchmark.cpp  latest-fastkron-results  process_fullresults.py  profile_kernels.py  requirements.txt  run_benchmarks.py  torch_kron.py
tests/benchmarks/data/: a100-tune-results  a100-tune-results-double  a100-tune-results-double-2  full-a100-results  full-a100-results-double  full-fasttune-a100-results-TT  full-fasttune-v100  full-fasttune-v100-double  full-fasttune-v100-float  full-notune-a100-results  full-notune-a100-results-TT  full-notune-v100  full-notune-v100-double  kmm-a100-tune-results  kmm-full-fasttune-a100  kmm-v100-tune-results  kmm-x86-avx-tune-results  v100-tune-results-double  v100-tune-results-float  x86-avx-fasttune-full-double  x86-avx-fasttune-full-float  x86-avx-notune-full  x86-avx-tune-results-float  x86-avx512-fasttune-full  x86-avx512-notune-full
tests/cuda/: CMakeLists.txt
tests/cuda/old/: CMakeLists.txt
tests/gpu/: CMakeLists.txt  multi-gpu-tuner-tests.cpp  single-gpu-TT-tests.cpp  single-gpu-non-square-tuner-tests.cpp  single-gpu-odd-shapes.cpp
tests/python/: test_numpy.py  test_torch.py  test_wheels.py
tests/src/: TT-tests.cpp  distinct-shapes.cpp  fusion-tests.cpp  general-kernel-tests-TT.cpp  general-kernel-tests.cpp  general-tests-NN.cpp  general-tests-TT.cpp  general-tests-all.cpp  multi-cuda-distinct-shapes.cpp  multi-cuda-no-fusion-non-square-tests.cpp  multi-cuda-no-fusion-tests.cpp  multi-cuda-tests-kernel_decl.inc  multi-cuda-tuner-tests.cpp  no-fusion-tests.cpp  non-square-TT-tests.cpp  non-square-tuner-tests.cpp  odd-shapes.cpp  select-backend.h
tests/src/old/: fusion-tests.cpp  no-fusion-tests.cpp  non-square-TT-tests.cpp  odd-shapes.cpp  tuner-tests.cpp
tests/x86/: CMakeLists.txt  memcheck.sh
(+66 files in other folders)
