[build-system]
requires = ["setuptools", "prebuilt_binaries"]
build-backend = "setuptools.build_meta"

[project]
name="pyfastkron"
authors=[{name="Abhinav Jangda", email="abhijangda@gmail.com"}]
requires-python= ">= 3.8"
version = "1.0"
license="MIT License Copyright (c) 2024 Abhinav Jangda"
dependencies = [
    "numpy",
    "torch",
    "torchvision"
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests/python",
]