[build-system]
requires = ["setuptools", "prebuilt_binaries", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name="pyfastkron"
authors=[{name="Abhinav Jangda", email="abhijangda@gmail.com"}]
maintainers = [{name="Abhinav Jangda", email="abhijangda@gmail.com"}]
description="A library for efficient matrix and kronecker product matrix multiplication on parallel hardware"
dynamic = ["version"]
requires-python= ">= 3.9"
license = {file="LICENSE.txt"}
readme = "README.md"
keywords = ["kronecker product", "cuda", "gpu", "kronecker matrix multiplication"]
dependencies = [
    "numpy",
    "torch",
    "torchvision"
]

[project.urls]
Homepage = "https://github.com/abhijangda/fastkron"
Documentation = "https://github.com/abhijangda/fastkron"
Repository = "https://github.com/abhijangda/fastkron"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests/python",
]

[tool.setuptools_scm]
local_scheme = "node-and-date"
write_to = "./pyfastkron/version.py"